Switching mobile background still to be 100% width, auto height to try again to fix the horizontal scrolling ability.

--- a/css/video-test.css
+++ b/css/video-test.css
@@ -162,7 +162,7 @@ html, body {
 		top: 0px;
 		object-fit: cover;
 		z-index: -1;
-		height: 100%;
-		width: auto;
+		height: auto;
+		width: 100%;
 	}
 }
